# UnBCIC-ED

resolucoes/: read  read.cpp  readstdin  readstdin.cpp  relatorio.adoc  relatorio.md  test.html
resolucoes/lista1/: lista_1_1.cpp  lista_1_1.x  lista_1_2.cpp  lista_1_2.x
resolucoes/lista2/: lista_2_1.cpp
resolucoes/lista4/: lista_4_1.cpp  lista_4_1.x  lista_4_2.cpp  lista_4_2.x
resolucoes/trabalho1/: CMakeLists.txt  Doxyfile.bak  README.md  configure.ac
resolucoes/trabalho1/doc/: Doxyfile  relatorio.adoc
resolucoes/trabalho1/doc/.asciidoctor/diagram/: mermaid test.svg.cache  mermaidtest.png.cache  mermaidtest.svg.cache
resolucoes/trabalho1/doc/html/: annotated.html  calculadora_8h.html  calculadora_8h_source.html  classes.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  globals_type.html  index.html  md___users_rafaeltheodoro__documents__rodrigo__un_b_c_i_c-_e_d_resolucoes_trabalho1__r_e_a_d_m_e.html  menudata.js  pages.html  pilha_8h.html  pilha_8h_source.html  posfixa_8h.html  posfixa_8h_source.html  structelement_pilha-members.html  structelement_pilha.html  structpilha-members.html  structpilha.html
resolucoes/trabalho1/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  classes_0.js  files_0.js  files_1.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  typedefs_0.js
resolucoes/trabalho1/doc/latex/: annotated.tex  calculadora_8h.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  md___users_rafaeltheodoro__documents__rodrigo__un_b_c_i_c-_e_d_resolucoes_trabalho1__r_e_a_d_m_e.tex  pilha_8h.tex  posfixa_8h.tex  refman.tex  structelement_pilha.tex  structpilha.tex
resolucoes/trabalho1/include/: calculadora.h  pilha.h  posfixa.h
resolucoes/trabalho1/src/: CMakeLists.txt  calculadora.c  main.c  pilha.c  posfixa.c
resolucoes/trabalho1/tests/: CMakeLists.txt  check_pilha.c  check_posfixa.c  lista_4_2_input.txt
resolucoes/trabalho2/: lista_dupla.c  main.c  populacoes.c  smoke_test.xlsx
src/: dfs.py  grafos.c  lista  lista.c  poli.c  polinomio.c  polinomio.h
src/arvores/: arvores.c  arvores.h  arvores.x  arvores_ime.c  fila.c  fila.h  lista_arvore.c  lista_arvore.h  main.c  pilhas.h
src/filas/: fila.c  filacircular.c
src/ordenacao/: ordenacao.c
src/pilhas/: main.c  pilhas.c  pilhas.h  pilhas.x
